Adicionando imagens dos integrantes do grupo, mexendo na amortização constante e colocando a amortização americana

--- a/web/WEB-INF/jspf/cabecalho.jspf
+++ b/web/WEB-INF/jspf/cabecalho.jspf
@@ -6,6 +6,6 @@
 
 <section id="banner">
     <h1>Amortizações</h1>
-    <p>Essa aplicação tem como intuito fazer o cálculo de amortizações, Amortização é um processo de extinção de uma dívida através de pagamentos periódicos
+    <p>Essa aplicação tem como intuito fazer o cálculo de amortizações<br/>Amortização é um processo de extinção de uma dívida através de pagamentos periódicos
     </p>
 </section>
